--- a/abril-13.04/1. FOI AMOR.md
+++ b/abril-13.04/1. FOI AMOR.md
@@ -1,19 +1,19 @@
 # FOI AMOR
 
-Foi amor, quando Deus aqui
-Neste mundo vil, homem Se tornou
-Foi amor, quando meu bom Deus
-Carpinteiro foi, quando aqui andou
-Foi amor, quando veio meu Jesus
-Pra me conceder nova vida e luz
-Foi amor, ao sofrer na cruz
-Por mim, um pobre pecador
-
-Foi amor, quando Deus desceu
-Pra cuidar de mim, qual um filho Seu
-Foi amor, ao morrer em dor
-Por um pobre ser sem qualquer valor
-Foi amor, ao ressuscitar, enfim
-Pra me conceder vida e paz sem fim
-Foi amor, ao sofrer na cruz
-Por mim, um pobre pecador
+Foi amor, quando Deus aqui<br>
+Neste mundo vil, homem Se tornou<br>
+Foi amor, quando meu bom Deus<br>
+Carpinteiro foi, quando aqui andou<br>
+Foi amor, quando veio meu Jesus<br>
+Pra me conceder nova vida e luz<br>
+Foi amor, ao sofrer na cruz<br>
+Por mim, um pobre pecador<br>
+<br>
+Foi amor, quando Deus desceu<br>
+Pra cuidar de mim, qual um filho Seu<br>
+Foi amor, ao morrer em dor<br>
+Por um pobre ser sem qualquer valor<br>
+Foi amor, ao ressuscitar, enfim<br>
+Pra me conceder vida e paz sem fim<br>
+Foi amor, ao sofrer na cruz<br>
+Por mim, um pobre pecador<br>
